fix(UI): :art: bug that was making some components to flicker

--- a/client/src/components/HomeComponents/AnimatedBackgrounds/_gradient_brackground.scss
+++ b/client/src/components/HomeComponents/AnimatedBackgrounds/_gradient_brackground.scss
@@ -49,8 +49,3 @@
     overflow: hidden;
     z-index: 10001;
   }
-  
-  /* This is just to transition when you change the viewport size. */
-  * {
-    transition: all 0.25s ease-out;
-  }
